compiler/tools/fpp-check/test/connection_pattern/undef_target.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/undef_target.fpp:10.5
    c
    ^
error: symbol c is not defined
note: looking for a component instance here
